FIX: issue with overflowing divs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2020,7 +2020,6 @@ body {
     .textarea-display {
         padding:10px;
         width:105%;
-        height:100px;
     }
    
 }
